# lynkt

./: .gitignore  Cargo.toml
app/: package.json  pnpm-lock.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-12-26-203130-0000_users/: up.sql
migrations/2025-12-26-203135-0000_click_events/: down.sql  up.sql
migrations/2025-12-26-203135-0000_link_groups/: down.sql  up.sql
migrations/2025-12-26-203136-0000_links/: up.sql
migrations/2025-12-26-203140-0000_daily_analytics/: down.sql  up.sql
migrations/2025-12-26-203214-0000_config/: up.sql
src/: main.rs  schema.rs
src/authentication/: mod.rs
src/database/: mod.rs
src/models/: mod.rs
src/server/: errors.rs  mod.rs  routers.rs
src/server/handlers/: auth.rs  mod.rs  slug.rs  user.rs
src/structs/: mod.rs
